Updated NEWS file, minor correction in book's code example
In the previous commit, the NEWS file wasn't updated, so the new `erode'
and `dilate' operators of Arithmetic are now mentioned there too. Their
description was also slightly modified to be more clear.

Also, while flipping through the book, I noticed that one of the code
example lines in the library demos was a little too long (and pushing out
of the page). This has also been corrected.

--- a/NEWS
+++ b/NEWS
@@ -16,9 +16,11 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
       in charge of detection.
 
   Arithmetic:
-    - connected-components: label the connected elements of the input.
+    - erode: Erode the foreground of a binary dataset.
+    - dilate: Dilate the foreground of a binary dataset.
     - filter-sigclip-mean: sigma-clipped, mean filter operator.
     - filter-sigclip-median: sigma-clipped, median filter operator.
+    - connected-components: label the connected elements of the input.
     - invert: subtract the maximum of unsigned types (absorption to emission).
 
   ConvertType:
