Arithmetic's filtering operators also work on blanks
Until now, Arithmetic's filtering operations ignored blank valued
pixels. However, in some cases, the user might want to use the filtering to
remove/interpolate over the blank pixels. So the condition to ignore blank
pixels is now removed. A paragraph was added to the `filter-mean' operator,
describing the effect and how to correct for it if it is important to
preserve blank elements.

--- a/NEWS
+++ b/NEWS
@@ -107,6 +107,11 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
 
 ** Changed features
 
+  Arithmetic:
+    - filter-mean: a blank value in the input can be non-blank in the
+         output when non-blank elements present in filter.
+    - filter-median: similar to filter-mean.
+
   Fits:
     --history: can be called/written multiple times in one run.
     --comment: can be called/written multiple times in one run.
