Nearest neighbor interpolation in Arithmetic
Using the (currently single function) interpolation library of Gnuastro,
Arithmetic can now fill-in blank values using the nearest neighbors with
the `interpolate-medianngb' operator.

--- a/NEWS
+++ b/NEWS
@@ -22,6 +22,7 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
     - filter-sigclip-median: sigma-clipped, median filter operator.
     - connected-components: label the connected elements of the input.
     - invert: subtract the maximum of unsigned types (absorption to emission).
+    - interpolate-medianngb: Interpolate (only blanks) with nearest neighbors.
 
   ConvertType:
     - TIFF images can also be used as input.
