gal_box_bound_ellipse return width isn't extra
Until now, the width returned by `gal_box_bound_ellipse' would be 2 pixels
extra along each dimension, thus leaving some extra pixels on the edges
when MakeProfiles used it. This was done to accommodate extreme cases,
where the center of a profile was just on the edge of the pixel and the
trunctation radius also had a fractional value.

However, after some checks, we see that even in the most extreme cases,
only a single (very distant) elliptical layer may be lost (not at all
significant). But in most (normal cases), these extra layers will cause
many extra pixels which can be a burden on MakeProfiles its self or
higher-level programs (for example when building a kernel to convolve
with).

Also, while checking the `gal_box_bound_ellipse' functions, I noticed that
in the documentation, we were mistakenly describing `a' and `b' as
major/minor axis length. While in practice they are `semi-major' and
`semi-minor'.

Since there is no extra layer, we also don't need the call to Crop when
making NoiseChisel's default internal kernel (in
`lib/gnuastro-internal/kernel-2d.h'). A new kernel is now created and used
(with a larger number of random points).

--- a/doc/gnuastro.texi
+++ b/doc/gnuastro.texi
@@ -24460,22 +24460,23 @@ vertical).
 @deftypefun void gal_box_bound_ellipse_extent (double @code{a}, double @code{b}, double @code{theta_deg}, double @code{*extent})
 Return the maximum extent along each dimension of the given ellipse from
 the center of the ellipse. Therefore this is half the extent of the box in
-each dimension. @code{a} is the ellipse major axis, @code{b} is the minor
-axis, @code{theta_deg} is the position angle in degrees. The extent in each
-dimension is in floating point format and stored in @code{extent} which
-must already be allocated before this function.
+each dimension. @code{a} is the ellipse semi-major axis, @code{b} is the
+semi-minor axis, @code{theta_deg} is the position angle in degrees. The
+extent in each dimension is in floating point format and stored in
+@code{extent} which must already be allocated before this function.
 @end deftypefun
 
 @deftypefun void gal_box_bound_ellipse (double @code{a}, double @code{b}, double @code{theta_deg}, long @code{*width})
-Any ellipse can be enclosed into a rectangular box. The purpose of this
-function is to give the height and width of that box assuming the center of
-the ellipse is in the box center. @code{a} is the ellipse major axis,
-@code{b} is the minor axis, @code{theta_deg} is the position angle in
-degrees. The @code{width} array will contain the output size in long
-integer type. @code{width[0]}, and @code{width[1]} are the number of pixels
-along the first and second FITS axis. Since the ellipse center is assumed
-to be in the center of the box, all the values in @code{width} will be an
-odd integer.
+Any ellipse can be enclosed into a rectangular box. This function will
+write the height and width of that box where @code{width} points to. It
+assumes the center of the ellipse is located within the central pixel of
+the box. @code{a} is the ellipse semi-major axis length, @code{b} is the
+semi-minor axis, @code{theta_deg} is the position angle in degrees. The
+@code{width} array will contain the output size in long integer
+type. @code{width[0]}, and @code{width[1]} are the number of pixels along
+the first and second FITS axis. Since the ellipse center is assumed to be
+in the center of the box, all the values in @code{width} will be an odd
+integer.
 @end deftypefun
 
 @deftypefun void gal_box_border_from_center (double @code{center}, size_t @code{ndim}, long @code{*width}, long @code{*fpixel}, long @code{*lpixel})
